# ldcov

./: .clang-format  .dockerignore  .flake8  .gitignore  .gitmodules  BGI_BATCHING_VS_FETCH_ALL_ANALYSIS.md  BGI_PERFORMANCE_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  MANIFEST.in  Makefile  PR_DESCRIPTION_FINAL.md  README.md  benchmark_bgi_performance.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  publish.yml
benchmarks/: Dockerfile.benchmark  README.md  analyze_profiles.py  benchmark_commits.sh  compare_results.py  generate_test_bgen.py  run_benchmark.py
examples/data/: data.bcor.idx  example.16bits.zstd.bgen.bgi  example.32bits.bgen.bgi  example.v11.bgen.bgi
ldcov/: __init__.py  __main__.py
ldcov/cli/: __init__.py  commands.py  main.py
ldcov/compute/: __init__.py  correlation.py  covariate.py  projection.py
ldcov/io/: __init__.py  bcor_file_handle.py  bcor_index.py  bcor_reader.py  bcor_writer.py  bgen_reader.py  bgen_writer.py  bgi_reader.py  correlation_io.py  covariate_loader.py  fs_utils.py  variant_index.py
ldcov/io/bgen/: __init__.py  _bgen.pxd  _bgen.pyx  _decompressor.pxd  _decompressor.pyx  bgen_reader_impl.cpp  bgen_reader_impl.h  bgi.py  decompress.cpp  decompress.h  decompression_result.h  file_reader_wrapper.h  header.pyx  mmap_reader.py  nan_handler.py  optimized_utils.py  reader.pxd  reader.pyx  reader_v1.cpp  reader_v1.pyx  utils.py  variant.pyx
ldcov/io/bgen/decompress/: CMakeLists.txt  buffer_manager.cpp  buffer_manager.h  compression_utils.cpp  compression_utils.h  decompressor.h  decompressor_factory.cpp  decompressor_factory.h  decompressor_interface.h  memory_pool.cpp  memory_pool.h  parallel_decompressor.cpp  parallel_decompressor.h  sequential_decompressor.cpp  sequential_decompressor.h  sequential_fast_path.cpp  sequential_fast_path.h  simd_utils.cpp  simd_utils.h  thread_pool.cpp  thread_pool.h
ldcov/io/bgen/format/: bgen_header.cpp  bgen_header.h  genotype_parser.cpp  genotype_parser.h  genotype_parser_simd.cpp  genotype_parser_simd.h  variant_parser.cpp  variant_parser.h
ldcov/io/bgen/index/: __init__.py  bgi_cache.cpp  bgi_cache.h  bgi_reader.cpp  bgi_reader.h
ldcov/io/bgen/io/: __init__.py  gcs_file_reader.cpp  gcs_file_reader.h  gcs_file_reader.py  gcs_optimizations.h  gcs_prefetch_reader.h  gcs_retry_wrapper.h  mmap_reader.cpp  mmap_reader.h  reader_interface.h
ldcov/io/bgen/legacy/: batch_decompressor.cpp  batch_decompressor.h  batch_decompressor.py  buffer_pool.cpp  buffer_pool.h  sequential_decompressor.cpp  sequential_decompressor.h
ldcov/io/blockmatrix/: __init__.py  block_codec.py  partitioner.py  reader.py
ldcov/ld_bm/: __init__.py  cli.py  extract.py
ldcov/utils/: __init__.py  categorical_utils.py  lazy_import.py  region_utils.py  variant_filter.py
scripts/: check_vendored.py  docker_build_vendored.sh  docker_build_with_vendored.sh  make_bcor_idx.py  make_bm_variant_index.py  prepare_vendored_libs.sh
tests/: conftest.py  helpers.py  test_bcor_file_handle.py  test_bcor_gcs.py  test_bcor_index.py  test_bcor_reader_subset.py  test_bgen_formats.py  test_bgen_io.py  test_bgen_reader.py  test_bgen_reader_bgi.py  test_bgi_reader.py  test_block_codec.py  test_blockmatrix_partitioner.py  test_blockmatrix_reader.py  test_categorical_utils.py  test_cli.py  test_compute.py  test_correlation_io.py  test_covariate.py  test_covariate_edge_cases.py  test_covariate_loader.py  test_fs_utils.py  test_gcs.py  test_gcs_bgen.py  test_gcs_functional.py  test_gcs_optimizations.py  test_io.py  test_ld_bm_cli.py  test_ld_bm_extract.py  test_ld_bm_gcs.py  test_ld_bm_s3.py  test_ldstore_comparison.py  test_projection.py  test_region_utils.py  test_sample_filtering.py  test_utils.py  test_variant_filter.py  test_variant_index.py
