[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ldcov"
description = "A Python package for efficient linkage disequilibrium calculation with covariate adjustment"
readme = "README.md"
authors = [
    {name = "Masahiro Kanai", email = "mkanai@broadinstitute.org"}
]
license = {text = "MIT"}
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.0.0",
    "bgen",
    "gcsfs>=0.7.0",
    "tqdm>=4.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=20.8b1",
    "flake8>=3.8.0",
]

[project.urls]
"Homepage" = "https://github.com/mkanai/ldcov"
"Bug Tracker" = "https://github.com/mkanai/ldcov/issues"

[project.scripts]
ldcov = "ldcov.cli.main:main"

[tool.setuptools]
packages = ["ldcov"]

[tool.setuptools_scm]

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-p no:asyncio"
