[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ldcov"
description = "A Python package for efficient linkage disequilibrium calculation with covariate adjustment"
readme = "README.md"
authors = [
    {name = "Masahiro Kanai", email = "mkanai@broadinstitute.org"}
]
# Using table format for license to support older setuptools versions
license = {text = "MIT License"}
# >=3.9 to match lazybgen, which provides the BGEN reader
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["version"]
dependencies = [
    # BGEN reader (extracted from ldcov), published to PyPI with binary wheels.
    "lazybgen>=0.1",
    "numpy>=1.19.0",
    "pandas>=1.0.0",
    "gcsfs>=0.7.0",
    "fsspec>=2021.0.0",
    "lz4>=3.1.0",
    "pyarrow>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    # 25.11.0 is the newest black that still supports Python 3.9 (26.x requires
    # >=3.10); the tree is formatted to satisfy both 25.11.0 and current black.
    "black>=25.11.0",
    "flake8>=3.8.0",
]
s3 = ["s3fs>=2021.0.0"]  # Read BlockMatrix LD (e.g. Pan-UKB) from AWS S3 via fsspec

[project.urls]
"Homepage" = "https://github.com/mkanai/ldcov"
"Bug Tracker" = "https://github.com/mkanai/ldcov/issues"
"Changelog" = "https://github.com/mkanai/ldcov/blob/master/CHANGELOG.md"

[project.scripts]
ldcov = "ldcov.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ldcov*"]

[tool.setuptools_scm]
fallback_version = "0.1.0"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-p no:asyncio"
markers = [
    "integration: marks tests as integration tests (may require external resources)"
]

# NOTE: flake8 config lives in .flake8 (stock flake8 does not read pyproject.toml).
